# webcachesim

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  INSTALL.md  LICENSE  Makefile  README.md  README_old.md  algorithm_params.yaml  bench.h  cache.h  job_simple.yaml  nodefile  random_helper.cpp  random_helper.h  request.h  requirements.txt  setup.py  test.cc  trace_params.yaml  webcachesim.cc  webcachesim.cpp
bench/: CMakeLists.txt
caches/: adaptsize_const.h  adaptsize_stub.cpp  adaptsize_stub.h  cache_object.h  gd_variants.cpp  gd_variants.h  lfo_cache.cpp  lfo_cache.h  lfo_features.h  lru_variants.cpp  lru_variants.h  optimal.cpp  optimal.h  solve_mcf.cpp  solve_mcf.h
config/: algorithm_params.yaml  authentication.yaml-TEMPLATE  job_dev.yaml  nodefile  nodefile_daniel  nodefile_tmp  trace_params.yaml  trace_params_daniel.yaml
config_daniel/: algorithm_params.yaml  nodefile  trace_params.yaml
docker/: Dockerfile
example/: CMakeLists.txt  test.cpp
helper/: cache_definitions.cpp  rewrite_trace.cc
helpers/: cache_definitions.cpp  rewrite_trace.cc  rewrite_trace_http.cc  rewrite_trace_wmf.cc
include/: annotate.h  bloom_filter.h  cache.h  cache_size_decouple.h  common.h  miss_decouple.h  pickset.h  request.h  rss.h  simulation.h  simulation_belady.h  simulation_belady_static.h  simulation_bins.h  simulation_future.h  simulation_lfo.h  simulation_lfo2.h  simulation_lr.h  simulation_lr_belady.h  simulation_tinylfu.h  utils.h
include/caches/: belady.h  belady_sample.h  belady_truncate.h  bins.h  cache_object.h  gbdt.h  gd_variants.h  gdbt.h  hyperbolic.h  lecar.h  lfo.h  lfo2.h  lfu_sample.h  lr.h  lru2.h  lru_variants.h  lruk_sample.h  random_variants.h  ucb.h  wlc.h
include/webcachesim/: api.h  bloom_filter.h  cache.h  cache_size_decouple.h  parallel_cache.h  request.h  simulation.h  simulation_lfo.h  simulation_tinylfu.h  simulation_truncate.h  trace_sanity_check.h  utils.h
include/webcachesim/caches/: adaptsize_const.h  belady.h  belady_sample.h  belady_truncate.h  binary_relaxed_belady.h  gd_variants.h  hyperbolic.h  lecar.h  lfo2.h  lfu_sample.h  lr.h  lrb.h  lru2.h  lru_variants.h  lruk_sample.h  parallel_lrb.h  (+9 more)
integration/: CMakeLists.txt  webcachesim.cpp  webcachesim_cli.cpp  webcachesim_cli_db.cpp  webcachesim_py.cpp
job/: job_memc.yaml  job_msr.yaml  job_simple_db.yaml  job_wiki.yaml
lib/: CMakeLists.txt
lib/LightGBM/: .gitignore  CMakeLists.txt
lib/LightGBM-eloiseh/: .gitignore  CMakeLists.txt  bhr  bytes  cache  cutoff  model  plot.py  prediction  randomsampling  sampling  time
lib/dlib/: README.md
lib/libbf-dadd48e/: .gitignore  CMakeLists.txt
lib/misc/: hash_combine.h
lib/mongo-c-driver/: CMakeLists.txt
lib/mongo-cxx-driver/: CMakeLists.txt
lib/sparsepp/: version
lib/tinylfu/: .gitignore  settings.gradle
notebook/: .gitignore  README.md  common.py  db_op.ipynb  dead_request.ipynb  distribution.ipynb  evaluation-decomposition.ipynb  evaluation-mem-app0.ipynb  evaluation-mem_window.ipynb  evaluation-memory.ipynb  evaluation-msr.ipynb  evaluation-range-lru.ipynb  evaluation-range.ipynb  evaluation-sensitivity.ipynb  evaluation-wiki.ipynb  evaluation.ipynb  evaluation_cpu_mem.ipynb  evaluation_eviction.ipynb  evaluation_forget_window.ipynb  evaluation_latency.ipynb  evaluation_miss_reduction.ipynb  evaluation_throughput.ipynb  evaluation_traffic.ipynb  feature_n_distance.ipynb  file_op.ipynb  gbdt.ipynb  lightgbm_weight.ipynb  long_term_feature.ipynb  lr.ipynb  memcachier.ipynb  memcachier_real_size.ipynb  model_importance.ipynb  model_loss.ipynb  model_miss.ipynb  snapshot-key.ipynb  snapshot.ipynb  snapshot_distribution.ipynb  snapshot_distribution_long_term.ipynb  synthetic_trace.ipynb  top1app.ipynb  (+1 more)
notebook/archieve/: 100m.ipynb  belady_future_signal.ipynb  evaluation-large.ipynb  evaluation-range-extra.ipynb  evaluation-range.ipynb  online_training.ipynb  snapshot_distribution-disc.ipynb
policies/: cache.h  cache_policies.cpp  gd_variants.cc  lru_variants.cc
pywebcachesim/: __init__.py  parser.py  runner.py
pywebcachesim/runner/: parser.py  runner.py
script/: build_remote.sh  download_remote.sh  git_pulling.sh  run.py  trace_info.sh
src/: CMakeLists.txt  api.cpp  random_helper.cpp  rss.cpp  simulation.cpp  simulation_belady.cpp  simulation_belady_static.cpp  simulation_bins.cpp  simulation_future.cpp  simulation_lfo.cpp  simulation_lfo2.cpp  simulation_lr.cpp  simulation_lr_belady.cpp  simulation_tinylfu.cpp  simulation_truncate.cpp  trace_sanity_check.cpp
src/caches/: annotate.cpp  belady.cpp  belady_sample.cpp  belady_truncate.cpp  binary_relaxed_belady.cpp  bins.cpp  gbdt.cpp  gd_variants.cpp  gdbt.cpp  hyperbolic.cpp  lecar.cpp  lfo.cpp  lfo2.cpp  lfu_sample.cpp  lr.cpp  lrb.cpp  lru_variants.cpp  lruk_sample.cpp  parallel_fifo.cpp  parallel_lrb.cpp  parallel_lru.cpp  parallel_wlc.cpp  percent_relaxed_belady.cpp  random_variants.cpp  relaxed_belady.cpp  static_parallel_cache.cpp  ucb.cpp  wlc.cpp
src/caches/lhd/: README  adaptsize.cpp  adaptsize.hpp  cache.hpp  candidate.hpp  constants.hpp  gds.hpp  gdwheel.hpp  hitdensity.cpp  hitdensity.hpp  hitdensity_class.cpp  hitdensity_lookahead.cpp  hitdensity_variants.hpp  lhd.cpp  lhd.hpp  lhd_variants.cpp  lhd_variants.h  parser.hpp  priority_queue.hpp  priority_queue_impl.hpp  ranked_age.hpp  ranked_heap_repl.hpp  ranked_lru.hpp  repl.hpp
src/caches/lhd2/: LICENSE  Makefile  cache.cpp  cache.hpp  config.hpp  example.cfg  lhd.hpp  lhd_variants.cpp  lhd_variants.h  lru.hpp  parser.hpp  repl.cpp
src/caches/lhd_competitors/: LICENSE  bytes.hpp  cache.hpp  candidate.hpp  circular_queue.hpp  constants.hpp  gds.hpp  gdwheel.hpp  hyperbolic.hpp  lhd_competitors.cpp  lhd_competitors.h  lru.hpp  parser.hpp  rand.hpp  ranked_age.hpp  ranked_heap_repl.hpp  ranked_lru.hpp  ranked_repl.hpp  repl.hpp
src/tracegenerator/: basic_trace.cc
src/traceparser/: rewrite_trace_http.cc  rewrite_trace_wmf.cc
test/: CMakeLists.txt  job_simple.yaml  test.tr  test.tr.ant  test_webcachesim.cpp  tmp.cpp
tracegenerator/: basic_trace.cc
traceparser/: rewrite_trace_simple.cc
(+1767 files in other folders)
